# GustoScript

./: .gitignore  CMakeLists.txt  README.md
example/: test.gs
include/: file.h  lexer.h  parser.h
src/: file.cpp  lexer.cpp  main.cpp  parser.cpp
